@@ -1,6 +1,7 @@
 2010-12-03  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Improve flymake setting.
+	Enable global-linum-mode.
 
 	* init-toolbar.el: Add flymake toolbar.
 
